--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -115,14 +115,68 @@
 	position: fixed
 	right: 0
 	top: 0
-	width: 0
+	width: 50%
+	margin-right: -50%
 	background: white
 	border-left: 2px solid #303030
-	transition: width 0.3s ease-out
+	transition: margin-right 0.3s ease-out
 	z-index: 999999999
+	padding: 10px
+	box-sizing: border-box
+
+	button
+		padding: 10px 20px
+		border: none
+		background: #303030
+		color: white
+		border: 2px solid #303030
+		font-size: 16px
+		font-weight: 500
+		text-transform: uppercase
+		cursor: pointer
+		transition: all 0.3s ease-out
+		outline: none
+
+		&:hover
+			color: #303030
+			background: white
+
+	.items
+		overflow-y: scroll
+		max-height: 100vh
+		position: absolute
+		top: 66px
+		bottom: 66px
+		width: 100%
+
+
+	.curtain-item
+		width: 100%
+		margin: 10px 0
+
+		img
+			width: 33%
+			display: inline-block
+
+		h2
+			width: 66%
+			display: inline-block
+			float: right
+			padding-left: 10px
+			box-sizing: border-box
+			font-size: 18px
+
+	.bottom-buttons
+		position: absolute
+		bottom: 10px
+		width: 100%
+
+		button:last-child
+			position: absolute
+			right: 20px
 
 .open-curtain
-	width: 50% !important
+	margin-right: 0 !important
 
 
 
