--- a/src/styles/mobile.sass
+++ b/src/styles/mobile.sass
@@ -38,5 +38,13 @@
 				&:last-child
 					margin-right: 0
 
+	#curtain
+		width: 100%
+		margin-right: -100%
+
 	.open-curtain
 		width: 100% !important
+		margin-right: 0 !important
+
+		#close-button
+			width: 100%
