add some styles to curtain

--- a/src/styles/mobile.sass
+++ b/src/styles/mobile.sass
@@ -42,9 +42,12 @@
 		width: 100%
 		margin-right: -100%
 
+		#close-button
+			width: 100%
+
+		button
+			padding: 10px !important
+
 	.open-curtain
 		width: 100% !important
 		margin-right: 0 !important
-
-		#close-button
-			width: 100%
