--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -111,7 +111,7 @@
 			float: left
 
 #curtain
-	height: 100vh
+	height: 100%
 	position: fixed
 	right: 0
 	top: 0
@@ -123,6 +123,7 @@
 	z-index: 999999999
 	padding: 10px
 	box-sizing: border-box
+	overflow: hidden
 
 	button
 		padding: 10px 20px
@@ -147,12 +148,19 @@
 		position: absolute
 		top: 66px
 		bottom: 66px
-		width: 100%
+		right: 10px
+		left: 10px
+		border: 1px solid #303030
 
 
 	.curtain-item
 		width: 100%
 		margin: 10px 0
+		display: flex
+		align-items: center
+
+		&:first-child
+			margin: 0
 
 		img
 			width: 33%
