add checkout layout

--- a/src/styles/mobile.sass
+++ b/src/styles/mobile.sass
@@ -51,3 +51,9 @@
 	.open-curtain
 		width: 100% !important
 		margin-right: 0 !important
+
+	.shift-curtain
+		margin-right: 100% !important
+
+	.open-checkout
+		width: 100% !important
