--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -186,6 +186,26 @@
 .open-curtain
 	margin-right: 0 !important
 
+.shift-curtain
+	margin-right: 50% !important
+
+#checkout
+	height: 100%
+	position: fixed
+	right: 0
+	top: 0
+	width: 50%
+	margin-right: -50%
+	background: white
+	border-left: 2px solid #303030
+	transition: margin-right 0.3s ease-out
+	z-index: 999999999
+	padding: 10px
+	box-sizing: border-box
+	overflow: hidden
+
+.open-checkout
+	margin-right: 0 !important
 
 
 @import "mobile"
