--- a/src/styles/mobile.sass
+++ b/src/styles/mobile.sass
@@ -1,4 +1,7 @@
 @media (max-width: 1110px)
+	.show-mobile
+		display: block
+
 	.container
 		width: 95%
 
@@ -48,11 +51,29 @@
 		button
 			padding: 10px !important
 
+	#checkout
+		width: 100% !important
+		margin-right: -100%
+
+		.card
+			flex-direction: column
+
+			.rccs
+				margin-bottom: 40px
+
+			.card-data
+				margin-left: 0
+
+				input
+					width: 290px
+					margin-bottom: 10px
+
 	.open-curtain
 		width: 100% !important
 		margin-right: 0 !important
 
 	.shift-curtain
+		width: 100% !important
 		margin-right: 100% !important
 
 	.open-checkout
