--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -10,6 +10,11 @@
 	line-height: 70px
 	font-size: 16px
 	margin-bottom: 30px
+	padding: 0 10px
+	box-sizing: border-box
+
+	ul
+		list-style: none
 
 	a
 		text-decoration: none
@@ -21,6 +26,7 @@
 	margin: 0 auto
 	box-sizing: border-box
 	padding: 0 15px
+	transition: width 0.3s ease-out
 
 .item
 	width: 22%
@@ -35,7 +41,7 @@
 		margin-right: 0
 
 	img
-		width: 100%
+		width: 100% !important
 		height: auto
 
 	h3
@@ -50,16 +56,41 @@
 		width: 20%
 		font-size: 16px
 
+.show-mobile
+	display: none
+
+button
+	padding: 10px 20px
+	border: none
+	background: #303030
+	color: white
+	border: 2px solid #303030
+	font-size: 16px
+	font-weight: 500
+	text-transform: uppercase
+	cursor: pointer
+	transition: all 0.3s ease-out
+	outline: none
+
+	&:hover
+		color: #303030
+		background: white
+
 .item-page
+	padding-bottom: 10px
+	overflow: hidden
+
 	img
 		width: 47.5%
 		height: auto
 		float: left
+		transition: width 0.3s ease-out
 
 	.info
 		width: 47.5%
 		margin-left: 5%
 		float: left
+		transition: width 0.3s ease-out
 
 		span
 			color: grey
@@ -75,17 +106,6 @@
 
 		button
 			margin: 0 10px 0 0
-			padding: 10px 20px
-			border: none
-			background: #303030
-			color: white
-			border: 2px solid #303030
-			font-size: 16px
-			font-weight: 500
-			text-transform: uppercase
-			cursor: pointer
-			transition: all 0.3s ease-out
-			outline: none
 
 			&:hover
 				color: #303030
@@ -110,37 +130,42 @@
 		.action-buttons
 			float: left
 
+	.retaled-items
+		width: 100%
+		clear: both
+		overflow: hidden
+		padding-top: 40px
+
+		h3
+			margin-bottom: 20px
+
+.container-compact
+	width: 40%
+	margin: 0
+	overflow: hidden
+	height: 100%
+
+	img
+		width: 100%
+
+	.info
+		width: 100%
+		margin: 0
+
 #curtain
 	height: 100%
 	position: fixed
 	right: 0
 	top: 0
-	width: 50%
-	margin-right: -50%
+	width: 60%
+	margin-right: -60%
 	background: white
 	border-left: 2px solid #303030
-	transition: margin-right 0.3s ease-out
+	transition: all 0.3s ease-out
 	z-index: 999999999
 	padding: 10px
 	box-sizing: border-box
 	overflow: hidden
-
-	button
-		padding: 10px 20px
-		border: none
-		background: #303030
-		color: white
-		border: 2px solid #303030
-		font-size: 16px
-		font-weight: 500
-		text-transform: uppercase
-		cursor: pointer
-		transition: all 0.3s ease-out
-		outline: none
-
-		&:hover
-			color: #303030
-			background: white
 
 	.items
 		overflow-y: scroll
@@ -187,15 +212,16 @@
 	margin-right: 0 !important
 
 .shift-curtain
-	margin-right: 50% !important
+	width: 30% !important
+	margin-right: 30% !important
 
 #checkout
 	height: 100%
 	position: fixed
 	right: 0
 	top: 0
-	width: 50%
-	margin-right: -50%
+	width: 30%
+	margin-right: -30%
 	background: white
 	border-left: 2px solid #303030
 	transition: margin-right 0.3s ease-out
@@ -203,6 +229,20 @@
 	padding: 10px
 	box-sizing: border-box
 	overflow: hidden
+	text-align: center
+
+	.card
+		display: flex
+		justify-content: center
+		align-items: center
+		height: 100%
+
+		.rccs
+			margin: 0
+
+		.card-data
+			margin-left: 30px
+
 
 .open-checkout
 	margin-right: 0 !important
