--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -3,6 +3,16 @@
 	padding: 0
 	font-family: 'Open Sans', sans-serif
 
+body::-webkit-scrollbar
+	width: 10px
+
+body::-webkit-scrollbar-track
+	background: rgba(0, 0, 0, 0)
+	opacity: 0
+
+body::-webkit-scrollbar-thumb
+	background: #303030
+
 #header
 	width: 100%
 	height: 70px
