--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -20,16 +20,21 @@ body::-webkit-scrollbar-thumb
 	line-height: 70px
 	font-size: 16px
 	margin-bottom: 30px
-	padding: 0 10px
 	box-sizing: border-box
 
 	ul
 		list-style: none
 
+	li
+		display: inline-block
+		margin-right: 20px
+
 	a
 		text-decoration: none
 		color: white
 		text-transform: uppercase
+		height: 100%
+		display: block
 
 .container
 	width: 1100px
