--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -91,6 +91,15 @@ button
 		color: #303030
 		background: white
 
+.disabled-button
+	cursor: default
+	background: #f44336
+	border-color: #f44336
+
+	&:hover
+		background: #f44336 !important
+		color: white !important
+
 .item-page
 	padding-bottom: 10px
 	overflow: hidden
@@ -334,6 +343,60 @@ button
 
 .open-checkout
 	margin-right: 0 !important
+
+
+.tabs
+	overflow: hidden
+	max-width: 860px
+	margin: 0 auto
+	width: 100%
+
+	.tab
+		overflow: hidden
+		width: 100%
+		height: auto
+		border-bottom: 2px solid white
+
+		h3
+			line-height: 50px
+			text-transform: uppercase
+			font-size: 20px
+			color: white
+			font-weight: 300
+			float: left
+
+
+		.tab-title
+			width: 100%
+			height: 50px
+			background: #303030
+			padding: 0 20px
+			box-sizing: border-box
+			display: block
+			position: relative
+			cursor: pointer
+
+			&:after
+				content: "+"
+				display: block
+				width: 50px
+				height: 50px
+				line-height: 50px
+				font-weight: 900
+				font-size: 30px
+				text-align: center
+				color: white
+				float: right
+
+		.tab-content
+			display: none
+			border: 2px solid #303030
+			box-sizing: border-box
+			padding: 20px
+
+		.tab-open
+			display: block
+
 
 
 @import "mobile"
